--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mywords",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "deploy": "yarn && yarn build && yarn export",
+    "start": "next start"
   },
   "dependencies": {
     "next": "12.0.4",
